# Personal-Utilities

./: .gitignore  README.md  pyproject.toml  testing.ipynb
.github/workflows/: linting.yml  publishing.yml  testing.yml
pu_pjr/changing_dirs/: quickcd.py  utils.py
pu_pjr/csv_files/: conversor.py  creator.py  mainpulate.py  utils.py
pu_pjr/dir_stats/: __main__.py  dir_contents.py  utils.py
pu_pjr/dlpoly4/: utils.py
pu_pjr/force_fields_plotting/: __main__.py  force_fields.py  utils.py
pu_pjr/plotting/: __main__.py  multi_file.py  utils.py  xy.py
test_files/dlpoly4/: FIELD  FIELD_ERR
tests/: test_changing_dirs.py  test_dir_stats.py  test_force_fields_plotting.py  test_plotting.py
tests/test_files/: potentials.pot
